<resources>
    <string name="app_name">EApplication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Daily Expense Tracker</string>
    <string name="nav_header_subtitle">12190065.gcit@rub.edu.bt</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!--    <string name="title_activity_login">Login</string>-->
    <!-- Strings used for fragments for navigation -->

    <string name="title_activity_register">Register</string>
    <string name="lemail">Email</string>
    <string name="lpassword">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="please_verify_your_email_address">Please Verify your Email Address</string>
    <string name="verify_now_btn">Verify now</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="save_reset_password">Save</string>
    <string name="dashboard">Dashboard</string>
    <string name="email_address_reset">Enter Email Address</string>
    <string name="update_email">Update Email</string>
    <string name="delete_account">Delete Account</string>
    <string name="register">Register</string>
    <string name="if_you_ve_account_login">If you\'ve account,Login</string>
    <string name="graph">Graph</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="title_activity_navigation">Navigation</string>


    <string name="menu_home">Home</string>
    <string name="menu_user">User</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_python">Python</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About</string>


    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_expense_details">Expense Details</string>
    <string name="nav_graph">Graph</string>
    <string name="nav_logout">Logout</string>

    <string name="nine">9</string>
    <string name="_eight">8</string>
    <string name="_seven">7</string>
    <string name="_six">6</string>
    <string name="_five">5</string>
    <string name="_four">4</string>
    <string name="_three">3</string>
    <string name="_two">2</string>
    <string name="_one">1</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mul">*</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="cons">C</string>
    <string name="div">/</string>
    <string name="ans">=</string>
    <string name="add_expense_amount">Add_expense amount</string>
    <string name="add_expenses">Add Expenses</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_amount">Add Amount</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_reset_password">ResetPassword</string>
</resources>