<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_expense_details"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_expense_details" />
        <item
            android:id="@+id/nav_graph"
            android:icon="@drawable/ic_graph"
            android:title="@string/nav_graph" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_logout" />
    </group>
</menu>