<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.bt.eapplication.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="edu.bt.eapplication.ui.gallery.GalleryFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_expense_details"
        android:name="edu.bt.eapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/nav_expense_details"
        tools:layout="@layout/fragment_expense_detail" />
    <fragment
        android:id="@+id/nav_graph"
        android:name="edu.bt.eapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/nav_graph"
        tools:layout="@layout/fragment_graph" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="edu.bt.eapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/nav_logout"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/blankFragment"
        android:name="edu.bt.eapplication.BlankFragment"
        android:label="fragment_blank"
        tools:layout="@layout/fragment_blank" />
</navigation>